@@ -1,5 +1,7 @@
 Sat Aug 28 00:27:24 1999  Jerry Quinn <jquinn@nortelnetworks.com>
 
+	* hppa-dis.c (print_insn_hppa): Place completers behind prefix 'c'. 
+
 	* hppa-dis.c (print_insn_hppa): Add cases for '.', '~'. '$'. and '!'
 
 	* hppa-dis.c (print_insn_hppa):  Look at next arg instead of bits
